[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "style-guide-cleaner"
version = "1.0.0"
description = "Style Guide Cleaner Pro - Clean DOCX files for LLM translation"
requires-python = ">=3.8"
dependencies = [
    "streamlit==1.50.0",
    "python-docx==0.8.11",
    "openai==1.3.0",
    "python-dotenv==1.0.0",
    "pandas==2.1.3",
    "markdown==3.5.1",
    "Pillow==10.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
